# what-to-do-backend

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
internals/: auth.py
models/: todo.py  user.py
routers/: todo.py  users.py
schema/: todo.py  users.py
utils/: database.py
utils/alembic/: env.py
utils/alembic/versions/: 4b55be055bf2_add_owner_to_todo.py  ad1aa6ea83ee_initial_migration.py
