[tool.poetry]
name = "what-to-do-backend"
version = "0.1.0"
description = ""
authors = ["arjunomray <arjunomray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.4.0"
asgiref = "3.8.1"
black = "24.4.2"
certifi = "2024.7.4"
click = "8.1.7"
dnspython = "2.6.1"
email-validator = "2.2.0"
fastapi = "0.112.0"
fastapi-cli = "0.0.5"
flake8 = "7.1.0"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
isort = "5.13.2"
mccabe = "0.7.0"
mdurl = "0.1.2"
mypy-extensions = "1.0.0"
packaging = "24.1"
pathspec = "0.12.1"
platformdirs = "4.2.2"
pycodestyle = "2.12.0"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pyflakes = "3.2.0"
pygments = "2.18.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.2"
rich = "13.7.1"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.32"
sqlmodel = "0.0.21"
sqlparse = "0.5.1"
starlette = "0.37.2"
typer = "0.12.3"
typing-extensions = "4.12.2"
uvicorn = "0.30.5"
uvloop = "0.19.0"
watchfiles = "0.23.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
